crates/ttrpg_checker/tests/snapshots/snapshot_diagnostics__wrong_argument_type.snap
---
source: crates/ttrpg_checker/tests/snapshot_diagnostics.rs
expression: render_errors(source)
---
error: argument `x` has type string, expected int
  --> line 4:37
  |
4 |     derive caller() -> int { double("hello") }
  |                                     ^^^^^^^
